<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的App</string>
    <string name="title_button">一键下载</string>
    <string name="back">返回</string>
    <string name="cancle">取消</string>
    <string name="save">保存</string>
    <string name="title_activity_app_search">AppSearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_comment_app">CommentAppActivity</string>
    <!-- JazzyViewPager -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string name="title_activity_guess">GuessActivity</string>
    <string name="title_activity_classification">ClassificationActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="title_activity_all_download">AllDownloadActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_star_recommend">StarRecommendActivity</string>
    <string name="title_activity_share_plus">SharePlusActivity</string>
    <string name="title_activity_app_list">AppListActivity</string>
    <string name="title_activity_share_range">ShareRangeActivity</string>
    <string name="title_activity_share_app_list">ShareAppListActivity</string>
    <string name="title_activity_star_search">StarSearchActivity</string>
    <string name="title_activity_message">MessageActivity</string>

</resources>
