<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="49.0dip"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:background="@color/bar_color" >

        <Button
            android:id="@+id/t_left"
            style="@style/txt_titleStyle"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@color/transparent"
            android:text="@string/cancle"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/txt_left"
            style="@style/txt_titleStyle"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/icon_back"
            android:text="@string/back"
            android:textSize="15sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imgbtn_back"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@color/transparent"
            android:src="@drawable/icon_back"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_titleStyle"
            android:layout_centerInParent="true"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/txt_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@color/transparent"
            android:text="@string/title_button"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/txt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@color/transparent"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/img_right"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@color/transparent"
            android:src="@drawable/title_search"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/imgbtn_plus"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@color/transparent"
            android:src="@drawable/img_plus"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/black2" />

</LinearLayout>